Update of Concourse pipeline.

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -43,13 +43,13 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/((workshop-repository))/sockshop.git
+    uri: https://github.com/((pipeline-tasks))/cf-deploy-sockshop.git
 
 - name: git-user
   type: git
   source:
     branch: master
-    uri: https://github.com/((workshop-repository))/user.git
+    uri: https://github.com/((source-code))/user.git
 
 - name: dynatrace
   type: dynatrace-resource
@@ -77,7 +77,7 @@ resources:
   type: semver
   source:
     driver: git
-    uri: https://github.com/((workshop-repository))/user.git
+    uri: https://github.com/((source-code))/user.git
     branch: master
     file: version
 
@@ -124,7 +124,7 @@ jobs:
     - get: git-pipeline
     - get: git-user
   - task: init-dynatrace-task
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/init-dynatrace-task.yml
+    file: git-pipeline/ci/tasks/init-dynatrace-task.yml
     params: 
       apitoken: ((dt_api_token))
       tenanthost: ((dt_tenant_host))
@@ -194,7 +194,7 @@ jobs:
   - get: git-pipeline
     trigger: false      
   - task: prepare-app-manifest
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/app-manifest-prep.yml
+    file: git-pipeline/ci/tasks/app-manifest-prep.yml
     params:
       STAGE: Dev
       PCF_APP_SUFFIX: ((pcf-dev-user-suffix)) 
@@ -222,7 +222,7 @@ jobs:
     - get: git-pipeline
       trigger: false 
   - task: run-health-check
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/jmeter-test.yml
+    file: git-pipeline/ci/tasks/jmeter-test.yml
     params:
       APP_REPO: git-user
       PRODUCTION: false
@@ -249,7 +249,7 @@ jobs:
         - run-health-check
     - get: git-pipeline
   - task: run-functional-check
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/jmeter-test.yml
+    file: git-pipeline/ci/tasks/jmeter-test.yml
     params:
       APP_REPO: git-user
       PRODUCTION: false
@@ -280,7 +280,7 @@ jobs:
   - get: git-pipeline
     trigger: false      
   - task: prepare-app-manifest
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/app-manifest-prep.yml
+    file: git-pipeline/ci/tasks/app-manifest-prep.yml
     params:
       STAGE: Staging
       PCF_APP_SUFFIX: ((pcf-staging-user-suffix)) 
@@ -307,19 +307,19 @@ jobs:
 #        - deploy-to-staging
 #     - get: git-pipeline
 #   - task: run-e2e-check
-#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/load-tests.yml
+#     file: git-pipeline/ci/tasks/load-tests.yml
 #     params:
 #       APP_REPO: git-pipeline
 #       FUNC_VALIDATION: yes
 #       PRODUCTION: true
-#       SCRIPT_NAME: deploy/cloud-foundry/ci/jmeterfront-end_e2e_load.jmx
+#       SCRIPT_NAME: /ci/jmeterfront-end_e2e_load.jmx
 #       PCF_APP_SUFFIX: ((pcf-staging-user-suffix))
 #       PCF_APP_DOMAIN: ((pcf-staging-app-domain))
 #       DT_LTN: e2eCheck
 #       VUCount: 5
 #       LoopCount: 20 
 #   - task: push-dynatrace-monspec-data
-#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/push-dynatrace-monspec-data.yml
+#     file: git-pipeline/ci/tasks/push-dynatrace-monspec-data.yml
 #     params: 
 #       monspecserviceenvironment: user/Production-$NEXT_APP_COLOR
 #       apitoken: ((dt_api_token))
@@ -337,7 +337,7 @@ jobs:
 #   - get: git-pipeline
 #     trigger: false      
 #   - task: get-current-app-color
-#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+#     file: git-pipeline/ci/tasks/current-app-get-info.yml
 #     params:
 #       PCF_APP_SUFFIX: ((pcf-prod-user-suffix))
 #       PCF_API: ((pcf-prod-api))
@@ -346,7 +346,7 @@ jobs:
 #       PCF_PWD: ((pcf-prod-deploy-password))
 #       PCF_SPACE: ((pcf-prod-space))       
 #   - task: validate-via-monspec
-#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/validate-via-monspec.yml
+#     file: git-pipeline/ci/tasks/validate-via-monspec.yml
 #     params: 
 #       monspeccomparison: user/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
 #       apitoken: ((dt_api_token))
@@ -367,7 +367,7 @@ jobs:
   - get: git-pipeline
     trigger: false      
   - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+    file: git-pipeline/ci/tasks/current-app-get-info.yml
     params:
       PCF_APP_SUFFIX: ((pcf-production-user-suffix))
       PCF_API: ((pcf-production-api))
@@ -376,7 +376,7 @@ jobs:
       PCF_USER: ((pcf-username))
       PCF_PWD: ((pcf-password))
   - task: prepare-app-manifest
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/app-manifest-prep.yml
+    file: git-pipeline/ci/tasks/app-manifest-prep.yml
     params:
       STAGE: Production
       PCF_APP_SUFFIX: ((pcf-production-user-suffix)) 
@@ -403,7 +403,7 @@ jobs:
   - get: git-pipeline
     trigger: false      
   - task: get-current-app-color
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/current-app-get-info.yml
+    file: git-pipeline/ci/tasks/current-app-get-info.yml
     params:
       PCF_APP_SUFFIX: ((pcf-production-user-suffix))
       PCF_API: ((pcf-production-api))
@@ -412,7 +412,7 @@ jobs:
       PCF_USER: ((pcf-username))
       PCF_PWD: ((pcf-password))
   - task: switch-app-routes
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/update-routes.yml
+    file: git-pipeline/ci/tasks/update-routes.yml
     params:
       PCF_APP_SUFFIX: ((pcf-production-user-suffix))
       PCF_APP_DOMAIN: ((pcf-production-app-domain))
@@ -435,7 +435,7 @@ jobs:
 #     - get: version
 #       params: { pre: build }
 #   - task: create-user-release-info
-#     file: git-pipeline/deploy/cloud-foundry/ci/tasks/prepare-release.yml
+#     file: git-pipeline/ci/tasks/prepare-release.yml
 #     params:
 #       APP_NAME: user
 #   - put: user-release
@@ -456,7 +456,7 @@ jobs:
       trigger: false
     - get: git-pipeline
   - task: run-performance-check
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/jmeter-test.yml
+    file: git-pipeline/ci/tasks/jmeter-test.yml
     params:
       APP_REPO: git-user
       PRODUCTION: false
@@ -472,7 +472,7 @@ jobs:
       AVG_RT_VALIDATION: 3000
       THINK_TIME: 0
   - task: push-dynatrace-monspec-data
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/push-dynatrace-monspec-data.yml
+    file: git-pipeline/ci/tasks/push-dynatrace-monspec-data.yml
     params: 
       monspecserviceenvironment: user/Dev
       apitoken: ((dt_api_token))
@@ -490,7 +490,7 @@ jobs:
   - get: git-pipeline
     trigger: false      
   - task: validate-via-monspec
-    file: git-pipeline/deploy/cloud-foundry/ci/tasks/validate-via-monspec.yml
+    file: git-pipeline/ci/tasks/validate-via-monspec.yml
     params: 
       monspeccomparison: user/DevToDevLastHour
       apitoken: ((dt_api_token))
