--- a/manifest/user.yml
+++ b/manifest/user.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: user
-        image: to-be-replaced-by-jenkins
+        image: dynatracesockshop/user:0.5.0
         env: 
         - name: DT_TAGS
           value: "product=sockshop"
